gcp-deploy/kube-prometheus-stack/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
    - host: public.service.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
