gcp-deploy/kube-prometheus-stack/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
    - host: www.tsorefdaniel.me
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
